# hashgen

./: .gitignore  Cargo.toml  README.md  benchmark_1_gb.sh  benchmark_64_gb.sh  benchmark_64_gb_variable_memory.sh  benchmark_results_1_gb.txt  benchmark_results_64_gb.txt  benchmark_results_variable_memory.txt  build.sh  run_all_benchmarks.sh
src/: main.rs
